--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,45 @@
-aniso8601==9.0.1
+astroid==2.5.2
+bcrypt==3.2.0
+boto3==1.17.5
+botocore==1.20.5
 certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
 click==7.1.2
-Flask==1.1.2
-Flask-RESTful==0.3.8
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-pytz==2021.1
+configobj==5.0.6
+cryptography==2.9
+dataclasses-json==0.5.2
+diskcache==5.2.1
+dnspython==2.1.0
+hurdle==2.0.8
+idna==2.10
+ipaddress==1.0.23
+isodate==0.6.0
+isort==5.8.0
+jmespath==0.10.0
+lazy-object-proxy==1.6.0
+marshmallow==3.11.1
+marshmallow-enum==1.5.1
+mccabe==0.6.1
+mypy-extensions==0.4.3
+netifaces==0.10.9
+ntplib==0.3.4
+oauthlib==3.1.0
+paramiko==2.7.2
+pyasn1==0.4.8
+pycparser==2.20
+pycryptodome==3.10.1
+pylint==2.7.4
+PyNaCl==1.4.0
+python-dateutil==2.8.1
+python-youtube==0.7.0
+requests==2.25.1
+requests-oauthlib==1.3.0
+s3transfer==0.3.4
 six==1.15.0
-Werkzeug==1.0.1
+stringcase==1.2.0
+toml==0.10.2
+typing-extensions==3.7.4.3
+typing-inspect==0.6.0
+urllib3==1.26.3
+wrapt==1.12.1
