--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pylint==2.7.4
 pyparsing==2.4.7
+python-dotenv==0.17.0
 python-youtube==0.7.0
 pytz==2021.1
 requests==2.25.1
