--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==4.0.0
 click==7.1.2
 dataclasses-json==0.5.2
 Flask==1.1.2
+Flask-Cors==3.0.10
 Flask-RESTful==0.3.8
 google-api-core==1.26.3
 google-api-python-client==2.1.0
